style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  height: 100%;
}

body {
  background: #272727;
  font-family: 'Poppins', sans-serif;
  height: 100%;
}

#container {
  height: 100%;
  position: absolute;
  width: 100%;
  overflow: hidden;
  top: 0;
  bottom: 0;
}

h1, h2, h3 {
  font-family: 'Playball', cursive;
}

a {
  text-decoration: none;
}

header {
  z-index: 2;
  padding: 0 20px;
  width: 100%;
  height: 60px;
  position: fixed;
  background: transparent;
  display: flex;
  justify-content: space-around;
  align-items: center;
  color: #fff;
}

.logo {
  display: flex;
  flex: 1;
}

.logo-img {
  width: 35px;
}

#nav-compact {
  position: fixed;
  z-index: 3;
  left: 100%;
  width: 50%;
  height: 100%;
  padding-top: 20%;
  background: rgba(39, 39, 39, .9);
  display: flex;
  flex-direction: column;
  padding-left: 10px;
  transition: all .2s ease-in-out;
}

#nav-compact a {
  display: flex;
  align-items: center;
  margin-bottom: 2rem;
  text-decoration: none;
  font-family: 'Playball', cursive;
  color: rgba(234, 235, 228, 1);
  font-size: 2rem;
}

#nav-compact img {
  width: 30px;
  margin-right: 10px;
}

#nav-full {
  color: #dadbd0;
  display: none;
  justify-content: space-around;
}

#nav-full__logo h1 {
  font-family: 'Sansita Swashed', cursive;
  font-size: 1rem;
}

#hero-section {
  overflow: scroll;
  background: linear-gradient(rgba(39, 39, 39, .4), rgba(39, 39, 39, .4)), url('./img/hero.jpg');
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center center;
  height: calc(100% + 70px);
  color: #eaebe4;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

#hero-section img {
  margin-top: -75px;
  width: 160px;
}

#hero-section h1 {
  margin-top: -50px;
  /* margin-right: 50px; */
  font-size: 6.2rem;
  text-shadow: 3px 3px #272727;
}

#hero-section h3 {
  margin-top: -10px;
  /* margin-right: 50px; */
  font-size: 3.1rem;
  text-shadow: 3px 3px #272727;
}

.menu-btn {
  position: fixed;
  right: 20px;
  top: 15px;
  z-index: 4;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 30px;
  height: 30px;
  cursor: pointer;
  transition: all .2s ease-in-out;
  flex: 0;
}

.menu-btn__burger {
  width: 30px;
  height: 2px;
  background: #eaebe4;
  border-radius: 5px;
  transition: all .2s ease-in-out;
}

.menu-btn__burger::before,
.menu-btn__burger::after {
  content: "";
  position: absolute;
  width: 30px;
  height: 2px;
  background: #eaebe4;
  border-radius: 5px;
  transition: all .2s ease-in-out;
}

.menu-btn__burger::before {
  transform: translateY(-10px);
}

.menu-btn__burger::after {
  transform: translateY(10px);
}

.menu-btn.open .menu-btn__burger {
  transform: translateX(-50px);
  background: transparent;
  box-shadow: none;
}

.menu-btn.open .menu-btn__burger::before {
  transform: rotate(45deg) translate(35px, -35px);
  /* background: #000; */
}

.menu-btn.open .menu-btn__burger::after {
  transform: rotate(-45deg) translate(35px, 35px);
  /* background: #000; */
}

#about-section {
  overflow: hidden;
  position: relative;
  line-height: 1.5;
  padding: 50px 10px 30px 10px;
  color: #272727;
  background: #eaebe4;
}

#about-section p {
  max-width: 800px;
  margin-bottom: 20px;
}

.about-section-img-1 {
  position: absolute;
  top: 10px;
  left: -20px;
  width: 250px;
  opacity: 0.2;
}

.about-section-img-2 {
  position: absolute;
  right: -30px;
  bottom: 10px;
  width: 250px;
  opacity: 0.2;
}

footer {
  padding: 40px 10px;
  display: flex;
  flex-direction: column;
  color: #eaebe4;
  position: relative;
  overflow: hidden;
}

/* .flex-container {
  width: 100%;
  padding: 40px 0;
  display: flex;
  justify-content: space-around;
} */

/* .flex-container div {
  display: flex;
  flex-direction: column;
  justify-content: center;
} */

footer .bg-image {
  position: absolute;
  right: -50px;
  bottom: -70px;
  /* width: 120px; */
  width: 300px;
  opacity: 0.2;
}

footer .icon {
  width: 22px;
  height: 22px;
  vertical-align: middle;
  margin-right: 10px;
}

footer h3 {
  margin-bottom: 20px;
  font-size: 3rem;
  /* border-bottom: 1px solid #eaebe4; */
}

footer p {
  font-size: 1rem;
  margin-bottom: 20px;
}

footer a {
  color: #dadbd0;
}

footer .copyright {
  padding: 5px 10px;
  margin: 0;
  position: absolute;
  left: 0;
  bottom: 0;
  width: 100%;
  background-color: #222;
  margin-top: 40px;
  font-size: .8rem;
}

